feat(JVM-GC): add demo code and note
- Add GC log test code
- Add some GC categories

#36